--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,22 +1,7 @@
 ---
-- name: Copy local public SSH key as authorized key on remote RPi.
-  authorized_key:
-    user: pi
-    state: present
-    key: "{{ lookup('file', lookup('env','HOME') + '/.ssh/id_rsa.pub') }}"
-
-- name: Secure RPi by disabling password login.
-  lineinfile:
-    path: /etc/ssh/sshd_config
-    regexp: "{{ item.regexp }}"
-    line: "{{ item.line }}"
-  with_items:
-    - { regexp: "^ChallengeResponseAuthentication", line: "ChallengeResponseAuthentication no"}
-    - { regexp: "^[#]?PasswordAuthentication", line: "PasswordAuthentication no"}
-    - { regexp: "^UsePAM", line: "UsePAM no"}
-
-- name: Restart SSH server to reload new configuration.
-  command: service ssh restart
+- name: Secure Raspberry Pi.
+  import_tasks: secure.yml
+  when: secure_raspberry_pis | bool
 
 - name: Install k3s on master node.
   shell:
