--- a/example/teardown.yml
+++ b/example/teardown.yml
@@ -4,9 +4,38 @@
     - name: Uninstall k3s from master node.
       shell:
         cmd: /usr/local/bin/k3s-uninstall.sh
+        removes: /usr/local/bin/k3s-uninstall.sh
+
+    - name: Remove remaining k3s artifacts.
+      become: true
+      file:
+        path: "{{ item }}"
+        state: absent
+      with_items:
+        - ~/.kube
+        - /etc/rancher
 
 - hosts: nodes
   tasks:
     - name: Uninstall k3s from agent nodes.
       shell:
         cmd: /usr/local/bin/k3s-agent-uninstall.sh
+        removes: /usr/local/bin/k3s-agent-uninstall.sh
+
+- hosts: cluster
+  become: true
+  vars:
+    secure_raspberry_pis: true
+  tasks:
+    - name: Reset SSH config.
+      lineinfile:
+        path: /etc/ssh/sshd_config
+        regexp: "{{ item.regexp }}"
+        line: "{{ item.line }}"
+      with_items:
+        - { regexp: "^ChallengeResponseAuthentication", line: "ChallengeResponseAuthentication yes"}
+        - { regexp: "^[#]?PasswordAuthentication", line: "#PasswordAuthentication no"}
+        - { regexp: "^UsePAM", line: "UsePAM yes"}
+
+    - name: Restart SSH server to reload new configuration.
+      command: service ssh restart
