--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,75 +4,12 @@
   when: secure_raspberry_pis | bool
 
 - name: Install k3s on master node.
-  shell:
-    cmd: >
-      curl -sfL https://get.k3s.io |
-      INSTALL_K3S_EXEC="--no-deploy servicelb --no-deploy traefik"
-      K3S_KUBECONFIG_MODE="644"
-      sh -s -
-    creates: /etc/rancher/k3s/k3s.yaml
-  when: inventory_hostname in groups['master']
+  import_tasks: master.yml
+  when: "'master' in group_names"
 
-- name: Read node-token from master.
-  slurp:
-    src: /var/lib/rancher/k3s/server/node-token
-  register: node_token
-  when: inventory_hostname in groups['master']
-
-- name: Store master node-token.
-  set_fact:
-   token: "{{ node_token.content | b64decode | regex_replace('\n', '') }}"
-  when: inventory_hostname in groups['master']
-
-- name: Create directory .kube.
-  file:
-    path: ~{{ ansible_user }}/.kube
-    state: directory
-    owner: "{{ ansible_user }}"
-  when: inventory_hostname in groups['master']
-
-- name: Copy config file to user home directory.
-  copy:
-    src: /etc/rancher/k3s/k3s.yaml
-    dest: ~{{ ansible_user }}/.kube/config
-    remote_src: yes
-    owner: "{{ ansible_user }}"
-  when: inventory_hostname in groups['master']
-
-- name: Replace cluster server address from localhost to k3s master IP.
-  command: >-
-    k3s kubectl config set-cluster default
-      --server=https://{{ groups['master'][0] }}:6443
-      --kubeconfig ~{{ ansible_user }}/.kube/config
-  changed_when: true
-  when: inventory_hostname in groups['master']
-
-- name: Install k3s on agent node.
-  shell:
-    cmd: >
-      curl -sfL https://get.k3s.io |
-      K3S_URL=https://{{ groups['master'][0] }}:6443
-      K3S_TOKEN={{ hostvars[groups['master'][0]]['token'] }}
-      K3S_KUBECONFIG_MODE="644"
-      sh -s -
-    creates: /etc/rancher/k3s/k3s.yaml
-  when: inventory_hostname in groups['nodes']
-
-- name: Install Helm.
-  shell:
-    cmd: "{{ item }}"
-    creates: /usr/local/bin/helm
-  with_items:
-    - curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
-    - chmod 700 /home/pi/get_helm.sh
-    - /home/pi/get_helm.sh
-    - rm /home/pi/get_helm.sh
-  when: inventory_hostname in groups['master']
-
-- name: Add official Helm charts repository.
-  shell:
-    cmd: "{{ item }}"
-  with_items:
-    - helm repo add stable https://kubernetes-charts.storage.googleapis.com
-    - helm repo update
-  when: inventory_hostname in groups['master']
+- name: Install k3s on worker nodes and join them to cluster.
+  import_tasks: nodes.yml
+  
+- name: Install Helm on master node.
+  import_tasks: helm.yml
+  when: "'master' in group_names"
