--- a/example/teardown.yml
+++ b/example/teardown.yml
@@ -12,7 +12,7 @@
         path: "{{ item }}"
         state: absent
       with_items:
-        - ~/.kube
+        - /home/pi/.kube
         - /etc/rancher
 
 - hosts: workers
